--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,14 +1,14 @@
 {
-	"extends": "../../tsconfig.base.json",
-	"compilerOptions": {
-		"target": "ES2020",
-		"module": "CommonJS",
-		"rootDir": "src",
-		"outDir": "dist",
-		"esModuleInterop": true,
-		"strict": true,
-		"skipLibCheck": true
-	},
-	"include": ["src"],
-	"exclude": ["node_modules", "dist"]
+  "extends": "../../tsconfig.base.json",
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "CommonJS",
+    "rootDir": "src",
+    "outDir": "dist",
+    "esModuleInterop": true,
+    "strict": true,
+    "skipLibCheck": true
+  },
+  "include": ["src", "test.js"],
+  "exclude": ["node_modules", "dist"]
 }
