--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
     "typescript-eslint": "^8.41.0"
+  },
+  "dependencies": {
+    "zod": "^4.1.5"
   }
 }
