--- a/apps/api/.env
+++ b/apps/api/.env
@@ -1,1 +1,8 @@
 MONGODB_URI=mongodb+srv://TetianaPalii:n00bpShU3fkTLNIi@cluster0.modqrsy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+userToken=92db55a7a72e26f92766ecb56014721d
+
+MAILTRAP_HOST=sandbox.smtp.mailtrap.io
+  MAILTRAP_PORT=2525
+  MAILTRAP_USER=7be364734d10d5
+  MAILTRAP_PASS=83646dbdae1a0e
+BACKEND_URL=http://localhost:4000
